# pacman

./: CMakeLists.txt  DoxyFile  EVALUATION.md  README.md  SCORE_SAMENVATTING.md  flake.nix
.github/workflows/: format.yml  main.yml
assets/: scores.json
assets/maps/: 1.txt  README.md
doc/html/: AbstractFactory_8h_source.html  AnimatedView_8h_source.html  Camera_8h_source.html  Coin_8h_source.html  Collectable_8h_source.html  Collision_8h_source.html  DefeatState_8h_source.html  EntityFactory_8h_source.html  EntityModel_8h_source.html  EntityView_8h_source.html  Event_8h_source.html  Fruit_8h_source.html  Game_8h_source.html  LevelState_8h_source.html  MenuState_8h_source.html  Observer_8h_source.html  PacmanCollisionHandler_8h_source.html  PausedState_8h_source.html  Random_8h_source.html  Score_8h_source.html  StateManager_8h_source.html  State_8h_source.html  Stopwatch_8h_source.html  Subject_8h_source.html  Util_8h_source.html  VictoryState_8h_source.html  Wall_8h_source.html  World_8h_source.html  annotated.html  annotated_dup.js  classAbstractFactory-members.html  classAbstractFactory.html  classAbstractFactory.js  classAnimatedView-members.html  classAnimatedView.html  classAnimatedView.js  classCamera-members.html  classCamera.html  classCollectEvent-members.html  classCollectEvent.html  (+195 more)
doc/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  (+32 more)
lib/logic/: AbstractFactory.h  CMakeLists.txt  Collision.h  Direction.h  EntityUtil.h  Event.cpp  Event.h  Ghost.h  GhostCollisionHandler.cpp  GhostCollisionHandler.h  Observer.cpp  Observer.h  Pacman.h  PacmanCollisionHandler.cpp  PacmanCollisionHandler.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Util.h  World.cpp  World.h  json.hpp
lib/logic/subject/: Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  EntityModel.cpp  EntityModel.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Subject.cpp  Subject.h  Wall.cpp  Wall.h
report/: Pacman report.md
src/: CMakeLists.txt  Camera.cpp  Camera.h  EntityFactory.cpp  EntityFactory.h  Game.cpp  Game.h  main.cpp
src/EntityView/: AnimatedView.cpp  AnimatedView.h  Coin.cpp  Coin.h  EntityView.cpp  EntityView.h  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Wall.cpp  Wall.h
src/game/: CMakeLists.txt  Game.cpp  Game.h  MenuState.cpp  MenuState.h  State.cpp  StateManager.cpp  StateManager.h  main.cpp
src/logic/: CMakeLists.txt  EntityModel.cpp  EntityModel.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h
src/state/: DefeatState.cpp  DefeatState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  State.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
