cmake_minimum_required(VERSION 3.28.3)
project(pacman)

set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

set(CMAKE_CXX_STANDARD 20)

SET(CMAKE_CXX_FLAGS "-Wall")

ADD_SUBDIRECTORY(src/)
ADD_SUBDIRECTORY(lib/logic)

INSTALL(TARGETS game DESTINATION bin)
IF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/installed" CACHE PATH "default install path" FORCE)
ENDIF()