SET(SRC
        Stopwatch.cpp
        Random.cpp
        Random.h
        subject/Subject.cpp
        subject/Subject.h
        subject/EntityModel.cpp
        subject/EntityModel.h
        subject/Ghost.cpp
        subject/Ghost.h
        subject/Pacman.cpp
        subject/Pacman.h
        World.cpp
        World.h
        AbstractFactory.h
        subject/Coin.h
        subject/Collectable.h
        subject/Fruit.h
        subject/Wall.h
        Observer.h
        Score.cpp
        Score.h
        Util.h
        Event.h
        Collision.h
        PacmanCollisionHandler.cpp
        PacmanCollisionHandler.h
        json.hpp
)

ADD_LIBRARY(logic STATIC ${SRC})